Change glyph for category filter type and fix alignment of glyph and text

--- a/website/src/components/Select.scss
+++ b/website/src/components/Select.scss
@@ -23,7 +23,7 @@ div.Select {
             span {
                 .tabler-icon {
                     height: 20px;
-                    //margin-bottom: 2px;
+                    margin-bottom: 2px;
                 }
             }
         }
